test/errors/scopes1.input.asm

* = $801

foo: {
    jmp .local_labelx
.local_label:
    rts
}
